UX-1010 fix alignment of user selector pills

--- a/_scss/components/custom-selector.scss
+++ b/_scss/components/custom-selector.scss
@@ -115,6 +115,6 @@
 }
 
 .user-activity-search-status {
-  line-height: 32px;
-  color: #ccc;
+  line-height: 30px;
+  color: #666;
 }
